kubernetes/league-backend_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: league-backend-deployment
  namespace: league-app
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: backend
      app: league-app
  template:
    metadata:
      labels:
        tier: backend
        app: league-app
    spec:
      containers:
        - name: league-app
          image: 872533758794.dkr.ecr.eu-central-1.amazonaws.com/league-backend
          ports:
            - containerPort: 8080
              name: http
