kubernetes/league-frontend_service.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: league-app
---
apiVersion: v1
kind: Service
metadata:
  name: league-frontend-service
  namespace: league-app
spec:
  type: LoadBalancer
  selector:
    tier: frontend
    app: league-frontend-app
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: league-frontend-deployment
  namespace: league-app
spec:
  replicas: 2
  selector:
    matchLabels:
      tier: frontend
      app: league-app
  template:
    metadata:
      labels:
        tier: frontend
        app: league-app
    spec:
      containers:
        - name: league-app
          image: 872533758794.dkr.ecr.eu-central-1.amazonaws.com/league
          ports:
            - containerPort: 80
